--- a/src/app/features/classes/list/classes-list.component.html
+++ b/src/app/features/classes/list/classes-list.component.html
@@ -37,7 +37,7 @@
         <ng-container matColumnDef="classTeacher">
           <th mat-header-cell *matHeaderCellDef> Class Teacher </th>
           <td mat-cell *matCellDef="let c">
-            {{ getTeacherName(c.classTeacherId) }}
+            {{ c.classTeacherFullName || getTeacherName(c.classTeacherId) }}
           </td>
         </ng-container>
 
