комит 9 - карточка класса и создание пользователя через multipart

--- a/src/app/features/assess/taking/test-taking.component.html
+++ b/src/app/features/assess/taking/test-taking.component.html
@@ -99,6 +99,7 @@
             mat-raised-button
             *ngIf="isLastQuestion()"
             color="accent"
+            class="submit-primary"
             (click)="submitAttempt()"
             [disabled]="submitting()"
           >
@@ -112,6 +113,7 @@
           <button
             mat-raised-button
             color="warn"
+            class="submit-early"
             (click)="submitAttempt()"
             [disabled]="submitting()"
           >
