--- a/src/app/features/assess/tests/card/test-card.component.html
+++ b/src/app/features/assess/tests/card/test-card.component.html
@@ -158,14 +158,14 @@
           <table mat-table [dataSource]="questions()" class="questions-table">
             <ng-container matColumnDef="order">
               <th mat-header-cell *matHeaderCellDef>{{ 'TEST.ORDER' | translate }}</th>
-              <td mat-cell *matCellDef="let question">{{ question.order }}</td>
+              <td mat-cell *matCellDef="let question">{{ question.order + 1 }}</td>
             </ng-container>
 
             <ng-container matColumnDef="question">
               <th mat-header-cell *matHeaderCellDef>{{ 'TOPIC.DETAILS.QUESTION' | translate }}</th>
               <td mat-cell *matCellDef="let question">
                 <a class="question-link" (click)="viewQuestion(question)" [matTooltip]="'TOPIC.DETAILS.VIEW_ANSWERS' | translate">
-                  {{ question.questionText }}
+                  {{ question.text || question.questionText }}
                 </a>
               </td>
             </ng-container>
