--- a/src/app/shared/components/upload-avatar/upload-avatar.component.html
+++ b/src/app/shared/components/upload-avatar/upload-avatar.component.html
@@ -48,7 +48,7 @@
     </button>
 
     <button
-      *ngIf="file()"
+      *ngIf="file() && uploadMode === 'direct'"
       mat-raised-button
       color="accent"
       (click)="upload()"
