--- a/src/app/features/assess/tests/form/test-form.component.html
+++ b/src/app/features/assess/tests/form/test-form.component.html
@@ -98,9 +98,31 @@
             }
           </mat-form-field>
 
-          <mat-form-field appearance="outline">
+          <mat-form-field appearance="outline" class="full-width">
             <mat-label>
               <span class="step-number">1.</span>
+              {{ 'TEST_FORM.FIELD_CLASS_LEVEL_LABEL' | translate }}
+            </mat-label>
+            <mat-select formControlName="classLevelId" required>
+              @if (classLevels && classLevels.length > 0) {
+                @for (level of classLevels; track level.id) {
+                  <mat-option [value]="level.id">
+                    {{ level.level }} {{ 'TEST_FORM.FIELD_CLASS_LEVEL_SUFFIX' | translate }}
+                  </mat-option>
+                }
+              } @else {
+                <mat-option disabled>{{ 'TEST_FORM.FIELD_CLASS_LEVEL_LOADING' | translate }}</mat-option>
+              }
+            </mat-select>
+            <mat-hint>{{ 'TEST_FORM.FIELD_CLASS_LEVEL_HINT' | translate }}</mat-hint>
+            @if (form.get('classLevelId')?.invalid && form.get('classLevelId')?.touched) {
+              <mat-error>{{ 'TEST_FORM.FIELD_CLASS_LEVEL_REQUIRED' | translate }}</mat-error>
+            }
+          </mat-form-field>
+
+          <mat-form-field appearance="outline">
+            <mat-label>
+              <span class="step-number">2.</span>
               {{ 'TEST_FORM.FIELD_SUBJECT_LABEL' | translate }}
             </mat-label>
             <mat-select formControlName="subjectId" required>
@@ -122,7 +144,7 @@
 
           <mat-form-field appearance="outline">
             <mat-label>
-              <span class="step-number">2.</span>
+              <span class="step-number">3.</span>
               {{ 'TEST_FORM.FIELD_SCHOOL_CLASSES_LABEL' | translate }}
             </mat-label>
             <mat-select formControlName="schoolClassIds" required multiple>
